[tool.poetry]
name = "lebot"
version = "1.1.0"
description = "A basic mini game bot for discord for my best friend"
authors = ["Raffael E. Schaefer"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.0.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
